# videomaster

./: CMakeLists.txt  README.md  build.sh
src/: batchprocessor.cpp  batchprocessor.h  batchworker.cpp  batchworker.h  ffmpeghandler.cpp  ffmpeghandler.h  mainwindow.cpp  mainwindow.h  thememanager.cpp  thememanager.h  transferworker.cpp  transferworker.h  videocomparator.cpp  videocomparator.h  videowidget.cpp  videowidget.h
